fix bg on mobile?

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
 	background-attachment: fixed;
 	background-color: #425269;
 	text-align: center;
+	min-height: 100vh;
 }
 
 .container {
